--- a/sign-up.css
+++ b/sign-up.css
@@ -2,6 +2,10 @@ body {
   background-image: url(R.jpeg);
   background-repeat: no-repeat;
   background-size: contain;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
 }
 body::before {
   content: ""; 
@@ -116,6 +120,9 @@ footer {
   /* margin-top: 12px; */
   background-color: grey;
   padding: 32px;
+  margin: 0;
+  
+
 }
 .footer:hover {
   background-color: rgb(99, 96, 96);
